Corrected Select box alignment issue on Transaction Page

--- a/src/pages/transaction/transaction.component.scss
+++ b/src/pages/transaction/transaction.component.scss
@@ -1,3 +1,7 @@
 .deleteTranasction {
     margin-left: 20px;
 }
+
+ion-item ion-select {
+  max-width: 80%;
+}
